# homework_14_web

./: LICENSE  README.md  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/versions/: c1a464d5c218_add_verify.py
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16394  16404  16405  16411  16413  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_unit_repository_contact.py
